--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 Options -Indexes
 
-ErrorDocument 404 /PAPNEW-master/400/404.html
-ErrorDocument 403 /PAPNEW-master/400/403.php
+ErrorDocument 404 /PAP/400/404.php
+ErrorDocument 403 /PAP/400/403.php
 
 RewriteEngine on
 RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
@@ -13,9 +13,9 @@ RewriteEngine On
 RewriteBase /
 
 # To externally redirect /dir/foo.php to /dir/foo
-#RewriteCond %{REQUEST_METHOD} !POST
-#RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.php [NC]
-#RewriteRule ^ %1 [R=302,L,NE]
+RewriteCond %{REQUEST_METHOD} !POST
+RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.php [NC]
+RewriteRule ^ %1 [R=302,L,NE]
 
 ## To internally redirect /dir/foo to /dir/foo.php
 RewriteCond %{REQUEST_FILENAME}.php -f [NC]
