--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+*.php linguist-detectable
+*.js linguist-detectable
+*.css linguist-detectable
+*.html linguist-detectable
