--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 
-*.php linguist-detectable
-*.js linguist-detectable
-*.css linguist-detectable
-*.html linguist-detectable
+*.php linguist-detectable=true
+*.js linguist-detectable=true
+*.css linguist-detectable=true
+*.html linguist-detectable=true
